[fix bug 881108] [RTL] Profile menu is shifted on the right

--- a/kitsune/sumo/static/less/main.less
+++ b/kitsune/sumo/static/less/main.less
@@ -67,6 +67,14 @@ body {
         float: right;
       }
     }
+
+    #aux-nav {
+      .dropdown {
+        li {
+          text-align: left;
+        }
+      }
+    }
   }
 }
 
